# tap-shopify

./: .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  schema_builder.py  tox.ini
.github/workflows/: test.yml
tap_shopify/: __init__.py  auth.py  client.py  client_bulk.py  client_gql.py  exceptions.py  gql_queries.py  paginator.py  streams.py  tap.py
tap_shopify/graphql_queries/: queries.gql  schema.gql
tap_shopify/graphql_schemas/: 2022-10_queries.json  2022-10_types.json  2023-01_queries.json  2023-01_types.json  2023-04_queries.json  2023-04_types.json  2023-07_queries.json  2023-07_types.json  2023-10_queries.json  2023-10_types.json
tests/: test_core.py
